# hms-video-demo-android

./: LICENSE  README.md  README_ZH.md
src/: build.gradle  settings.gradle
src/app/: README.md  README_ZH.md  agconnect-services.json  build.gradle  proguard-rules.pro
src/app/src/main/: AndroidManifest.xml
src/app/src/main/assets/: video_kit_demo.txt
src/app/src/main/res/layout/: activity_main.xml  bitrate_range_dialog.xml  play_view.xml  set_alg_para.xml
src/app/src/main/res/menu/: menu_main.xml
src/app/src/main/res/values/: colors.xml  strings.xml
src/app/src/main/res/values-zh-rCN/: strings.xml
src/gradle/wrapper/: gradle-wrapper.properties
src/hdrvivid/: README.md  README_ZH.md  build.gradle  proguard-rules.pro
src/hdrvivid/src/main/: AndroidManifest.xml
src/hdrvivid/src/main/cpp/: CMakeLists.txt  SimpleCodec.cpp  SimpleCodec.h  SimpleExtractor.cpp  SimpleExtractor.h  SimpleJni.cpp  SimpleProcessor.cpp  SimpleProcessor.h
src/hdrvivid/src/main/cpp/base/: GlContext.cpp  GlContext.h  MediaFormatBuffer.cpp  MediaFormatBuffer.h  SimpleCommon.cpp  SimpleCommon.h  SimpleLog.cpp  SimpleLog.h  SimplePacket.cpp  SimplePacket.h  SimplePlayer.cpp  SimplePlayer.h
src/hdrvivid/src/main/cpp/base/te/: TeStream.c  TeStream.h
src/hdrvivid/src/main/cpp/hdr/: HdrMetaData.cpp  HdrMetaData.h  Sei.h  nalu.h
src/hdrvivid/src/main/cpp/utils/: JniUtil.cpp  JniUtil.h
src/hdrvivid/src/main/res/drawable/: selected.xml
src/hdrvivid/src/main/res/layout/: action_spinner_item.xml  activity_main.xml  activity_mp_surface_view.xml  base_fragment.xml  file_spinner_item.xml  test_ability_api_view.xml
src/hdrvivid/src/main/res/values-night/: themes.xml
(+57 files in other folders)
